# astrowidgets

./: .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  .rtd-environment.yml  .travis.yml  CHANGES.rst  LICENSE.rst  MANIFEST.in  README  README.rst  appveyor.yml  conftest.py  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci_workflows.yml  predeps_workflow.yml  publish.yml
astrowidgets/: MatImageWidget.py  __init__.py  _astropy_init.py  bqplot.py  conftest.py  core.py  cursor_info.py  ginga.py  glupyter.py  helpers.py  interface-definition.md  interface_definition.py  plotly.py  tox.ini
astrowidgets/examples/: core.py  stginga_imagewidget.ipynb
astrowidgets/tests/: _test_widget_api_ginga.py  conftest.py  test_abstract_class.py  test_api.py  test_api_ginga.py  test_bqplot_api.py  test_cursor_info.py  test_ginga_widget.py  test_image_wdiget.py  test_image_widget.py  test_widget_api.py  test_widget_api_bqplot.py  test_widget_api_ginga.py  test_widget_pixel_offset.py  test_widget_with_wcs.py  widget_api_test.py
docs/: abstract.rst  conf.py  ginga.rst  index.rst  install.rst  requirements.txt
docs/astrowidgets/: api.rst  index.rst
example_notebooks/: README.md  big_mosaic.ipynb  bqplot_widget.ipynb  cube_4d.ipynb  demo_MatImageWidget.ipynb  ds9_regions.ipynb  ginga_wcsaxes.ipynb  ginga_widget.ipynb  gui_interactions.ipynb  linked_wcs_12_windows.ipynb  linked_wcs_2_windows.ipynb  linked_wcs_blink.ipynb  named_markers.ipynb  stginga_imagewidget.ipynb
example_notebooks/ginga/: README.md  bqplot_widget.ipynb  ginga_wcsaxes.ipynb  ginga_widget.ipynb  gui_interactions.ipynb  named_markers.ipynb
example_notebooks/glupyter/: glupyter_widget.ipynb
