[project]
name = "astrowidgets"
description = "Widgets for the Jupyter notebook and JupyterLab"
readme = "README.rst"
authors = [
    { name = "Astropy Developers", email = "mattwcraig@gmail.com"},
]
license = "BSD 3-Clause"
license-files = ["LICENSE.rst"]
keywords = [
    "astronomy",
    "python",
]
classifiers = [
    "Programming Language :: Python",
]
dependencies = [
    "astropy",
    "astro-image-display-api>=0.2.1",
    "ginga>=3.4",
    "pillow",
    "ipywidgets>=8",
    "ipyevents>=0.6.3",
    "jupyterlab>=3",
    "aggdraw",
    "bqplot>=0.12,<0.13",
    "bqplot-image-gl",
    "matplotlib",
]
dynamic = [
    "version",
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest-astropy",
    "pytest-cov",
    "pytest-mock",
]
docs = [
    "sphinx-astropy",
]

[build-system]
requires = ["setuptools",
            "setuptools_scm",
            "wheel"]
build-backend = 'setuptools.build_meta'

[tool.flake8]
extend-ignore = ["E501", "W503"]

[tool.pytest.ini_options]
astropy_header = true
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:traitlets",
]

[tool.coverage.run]
source = ["astrowidgets"]
omit = [
    "astrowidgets/cython_version*",
    "astrowidgets/setup_package*",
    "astrowidgets/*/setup_package*",
    "astrowidgets/*/*/setup_package*",
    "astrowidgets/tests/*",
    "astrowidgets/*/tests/*",
    "astrowidgets/*/*/tests/*",
    "astrowidgets/version*",
    "*/astrowidgets/cython_version*",
    "*/astrowidgets/setup_package*",
    "*/astrowidgets/*/setup_package*",
    "*/astrowidgets/*/*/setup_package*",
    "*/astrowidgets/tests/*",
    "*/astrowidgets/*/tests/*",
    "*/astrowidgets/*/*/tests/*",
    "*/astrowidgets/version*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main(.*):",
    "pragma: py{ignore_python_version}",
    "def _ipython_key_completions_",
]