[tool:pytest]
testpaths = "astrowidgets" "docs"
astropy_header = true
# The comment below should be removed when the ginga problem with doctest
# is fixed.
# doctest_plus = disabled
text_file_format = rst
addopts = -p no:warnings

[flake8]
# E501: line too long
# W503: line break before binary operator
ignore = E501,W503
exclude = setup_package.py,conftest.py,__init__.py

[metadata]
name = astrowidgets
description = Widgets for the Jupyter notebook and JupyterLab
long_description = file: README.rst
author = Astropy Developers
author_email = mattwcraig@gmail.com
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://astrowidgets.readthedocs.io
edit_on_github = True
github_project = astropy/astrowidgets

[options]
zip_safe = False
packages = find:
install_requires =
    astropy
    ginga
    pillow
    ipywidgets>=7.5
    ipyevents>=0.6.3
    jupyterlab>=1
    aggdraw
python_requires >=3.6

[options.extras_require]
test =
    pytest-astropy
    pytest-cov
docs =
    sphinx-astropy

[options.package_data]
astrowidgets.tests =
    coveragerc
