[tool:pytest]
testpaths = "astrowidgets" "docs"
astropy_header = true
# The commented lines below should be removed when the ginga problem with doctest
# is fixed.
#doctest_plus = disabled
#text_file_format = rst
xfail_strict = true
filterwarnings =
    error
    ignore:numpy.ufunc size changed:RuntimeWarning
    ignore:numpy.ndarray size changed:RuntimeWarning
    ignore::DeprecationWarning:ginga
    ignore:is empty:UserWarning

[flake8]
# E501: line too long
# W503: line break before binary operator
ignore = E501,W503

[metadata]
name = astrowidgets
description = Widgets for the Jupyter notebook and JupyterLab
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Astropy Developers
author_email = mattwcraig@gmail.com
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://astrowidgets.readthedocs.io
edit_on_github = True
github_project = astropy/astrowidgets

[options]
zip_safe = False
packages = find:
install_requires =
    astropy
    ginga
    pillow
    ipywidgets>=7.5
    ipyevents>=0.6.3
    jupyterlab>=1
    aggdraw
python_requires >=3.6

[options.extras_require]
test =
    pytest-astropy
    pytest-cov
docs =
    sphinx-astropy

[coverage:run]
source = astrowidgets
omit =
    astrowidgets/_astropy_init*
    astrowidgets/conftest*
    astrowidgets/cython_version*
    astrowidgets/setup_package*
    astrowidgets/*/setup_package*
    astrowidgets/*/*/setup_package*
    astrowidgets/tests/*
    astrowidgets/*/tests/*
    astrowidgets/*/*/tests/*
    astrowidgets/version*
    */astrowidgets/_astropy_init*
    */astrowidgets/conftest*
    */astrowidgets/cython_version*
    */astrowidgets/setup_package*
    */astrowidgets/*/setup_package*
    */astrowidgets/*/*/setup_package*
    */astrowidgets/tests/*
    */astrowidgets/*/tests/*
    */astrowidgets/*/*/tests/*
    */astrowidgets/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
